2011-10-02  Kaz Kylheku  <kaz@kylheku.com>

	Compiles as C++ again.

	* lib.h (cons_set): New macro.

	* match.c (match_line, match_files): In collect clause handlers,
	move variable declarations above goto, and initialize with
	cons_set, instead of declaring and initializing with cons_bind.
	This eliminates the stupid C++ error that goto skips a variable
	initialization (which happens even when it can be trivially
	proven that the has no next use at the goto site!)

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	Version 038

	New eof directive.

	Fixes in skip directive to work very well with eof.

	Consecutive variable matching semantics improved; concept of double
	variable match introduced for unbound variable followed by
	regex variable.

	Directives collect and coll have keyword arguments for more control
	over their behavior.

	Parallel directives (all, some, none, ...) are available in
	horizontal mode.

	New choose directive for selecting one of numerous alternatives

	GC bugfix in new filtering code.

	The code has an issue compling with GNU C++ instead of C,
	which is something that is supported by this project.
	Not a release-blocking issue. Not easy to fix without
	restructuring some code.

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	Maintaining C++ compiling (except for two issues that will
	need another commit).

	* filter.c: Include "gc.h" for prototype of protect.
	(struct filter_pair): Use const wchar_t *, so we can assign
	literals.
	(html_hex_continue): Ditto.

	* lib.c (and): Function renamed to andf, since and is a C++
	operator.

	* lib.h (and): Declaration renamed.

	* match.c (match_files): Use of and updated to andf.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>

	HACKING: Clarified that --vg-debug is also needed to turn on on
	the Valgrind support at run-time, in addition to building it in.

2011-10-01  Kaz Kylheku  <kaz@kylheku.com>
